# stringly

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  stringly.py  tests.py
stringly/: __init__.py  __main__.py  cli.py  error.py  proto.py  py.typed  serializer.py  util.py
