[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stringly"
authors = [{name = "Evalf", email = "info@evalf.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = ["typing-extensions >=4.2"]


[project.urls]
Home = "https://github.com/evalf/stringly/"
